cambios servicios y footer

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 class="btn btn-warning btn-lg animate__animated animate__fadeInUp mt-3">Ver
                                 Propiedades</a>
                         </div>
-                        <img src="/images/carouselHome/CasaLD-00.jpeg" class="img-fluid" alt="Propiedad destacada">
+                        <img src="./images/carouselHome/CasaLD-00.jpeg" class="img-fluid" alt="Propiedad destacada">
                     </div>
                     <!-- Slide 2 -->
                     <div class="swiper-slide">
@@ -142,7 +142,7 @@
                                 class="btn btn-warning btn-lg animate__animated animate__fadeInUp mt-3">Nuestros
                                 Servicios</a>
                         </div>
-                        <img src="/images/carouselHome/CasaLD-01.jpeg" class="img-fluid" alt="Propiedad de lujo">
+                        <img src="./images/carouselHome/CasaLD-01.jpeg" class="img-fluid" alt="Propiedad de lujo">
                     </div>
                 </div>
                 <!-- Pagination -->
@@ -206,7 +206,7 @@
 
                     </div>
                     <div class="col-md-6 justify-content-center imgHistoriaHome">
-                        <img src="/images/logoConNombre.png" alt="Historia de UnenGroup" class="img-fluid rounded">
+                        <img src="./images/logoConNombre.png" alt="Historia de UnenGroup" class="img-fluid rounded">
                     </div>
                 </div>
 
@@ -803,7 +803,7 @@
                             <div
                                 class="testimonial-card p-4 shadow-sm rounded bg-white animate__animated animate__fadeInUp">
                                 <div class="testimonial-header d-flex align-items-center mb-3">
-                                    <img src="/images//team-1.jpg" alt="Cliente 3" class="rounded-circle me-3"
+                                    <img src="./images//team-1.jpg" alt="Cliente 3" class="rounded-circle me-3"
                                         width="60" height="auto">
                                     <div>
                                         <h5 class="fw-bold mb-0 text-secondary">Carlos García</h5>
@@ -913,7 +913,7 @@
                 <div class="col-md-8">
                     <h5 class="text-uppercase mb-3">Sobre Nosotros</h5>
                     <div class="d-flex align-items-center" id="espacioFotoMobile">
-                        <img src="/images/fotoEjemploCoty.jpg" alt="logo" class="me-3 ocultarMobile"
+                        <img src="./images/fotoEjemploCoty.jpg" alt="logo" class="me-3 ocultarMobile"
                             style="max-width: 150px; border-radius:50%;">
                         <p class="mb-0">Somos una inmobiliaria comprometida con ayudarte a encontrar el hogar de tus
                             sueños. Ofrecemos
