--- a/nosotros.html
+++ b/nosotros.html
@@ -36,8 +36,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Raleway:wght@300&display=swap"
         rel="stylesheet">
     <!-- Estilos Propios -->
-    <link rel="stylesheet" href="/css/stylesGen.css">
-    <link rel="stylesheet" href="/css/stylesNosotros.css">
+    <link rel="stylesheet" href="./css/stylesGen.css">
+    <link rel="stylesheet" href="./css/stylesNosotros.css">
 
 
     <!-- FontAwesome -->
@@ -51,7 +51,7 @@
             <div class="container">
                 <!-- Logo -->
                 <a class="navbar-brand" href="/">
-                    <img src="/images/logoNavBarprueba.png" alt="Logo" id="logoNavbar">
+                    <img src="./images/logoNavBarprueba.png" alt="Logo" id="logoNavbar">
                 </a>
                 <!-- Toggle Button for Mobile -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -91,7 +91,8 @@
                                     <a class="dropdown-item" href="propiedades.html?tipo=terreno">Terrenos</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="propiedades.html?tipo=local">Locales</a>
+                                    <a class="dropdown-item" href="propiedades.html?tipo=local">Locales |
+                                        Oficinas</a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="propiedades.html?tipo=all">Todas</a>
