--- a/propiedades.html
+++ b/propiedades.html
@@ -9,21 +9,21 @@
 
   <!-- Meta SEO -->
   <title>UnenGroup | Propiedades</title>
-  <meta name="description" content="Descripción breve y precisa para buscadores.">
+  <!-- <meta name="description" content="Descripción breve y precisa para buscadores.">
   <meta name="keywords" content="palabras clave, separadas, por, comas">
   <meta name="author" content="Tu Nombre o Empresa">
-  <meta name="robots" content="index, follow">
+  <meta name="robots" content="index, follow"> -->
 
   <!-- Meta Redes Sociales (Open Graph y Twitter Cards) -->
-  <meta property="og:title" content="Nombre de tu Sitio | Título de la Página">
+  <!-- <meta property="og:title" content="Nombre de tu Sitio | Título de la Página">
   <meta property="og:description" content="Descripción atractiva para compartir en redes sociales.">
   <meta property="og:image" content="URL_de_la_imagen_destacada">
   <meta property="og:url" content="https://tusitioweb.com">
   <meta property="og:type" content="website">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary_large_image"> -->
 
   <!-- Icono del Sitio -->
-  <link rel="icon" href="/images/logo.png" type="image/x-icon">
+  <link rel="icon" href="./images/logo.png" type="image/x-icon">
 
   <!-- CSS Frameworks y Librerías -->
   <!-- Bootstrap -->
@@ -36,8 +36,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Raleway:wght@300&display=swap"
     rel="stylesheet">
   <!-- Estilos Propios -->
-  <link rel="stylesheet" href="/css/stylesGen.css">
-  <link rel="stylesheet" href="/css/stylesPropiedades.css">
+  <link rel="stylesheet" href="./css/stylesGen.css">
+  <link rel="stylesheet" href="./css/stylesPropiedades.css">
   <!-- <link rel="stylesheet" href="/css/stylesInicio.css"> -->
 
   <!-- FontAwesome -->
@@ -51,7 +51,7 @@
       <div class="container">
         <!-- Logo -->
         <a class="navbar-brand" href="/">
-          <img src="images/logoNavBarprueba.png" alt="Logo" id="logoNavbar">
+          <img src="./images/logoNavBarprueba.png" alt="Logo" id="logoNavbar">
         </a>
         <!-- Toggle Button for Mobile -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -89,7 +89,8 @@
                   <a class="dropdown-item" href="propiedades.html?tipo=terreno">Terrenos</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=local">Locales</a>
+                  <a class="dropdown-item" href="propiedades.html?tipo=local">Locales |
+                    Oficinas</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="propiedades.html?tipo=all">Todas</a>
@@ -227,7 +228,7 @@
         <div class="col-md-8">
           <h5 class="text-uppercase mb-3">Sobre Nosotros</h5>
           <div class="d-flex align-items-center" id="espacioFotoMobile">
-            <img src="/images/fotoEjemploCoty.jpg" alt="logo" class="me-3 ocultarMobile"
+            <img src="./images/fotoEjemploCoty.jpg" alt="logo" class="me-3 ocultarMobile"
               style="max-width: 150px; border-radius:50%;">
             <p class="mb-0">Somos una inmobiliaria comprometida con ayudarte a encontrar el hogar de tus
               sueños. Ofrecemos
@@ -282,11 +283,11 @@
   <!-- Pannellum  -->
   <script src="https://cdn.jsdelivr.net/npm/pannellum/build/pannellum.js"></script>
   <!-- Script Propio -->
-  <script src="/js/scriptSwiperHome.js"></script>
-  <script src="/js/scriptSwiperTestimonials.js"></script>
-  <script src="/js/scriptNavbarFixed.js"></script>
-  <script src="/js/scriptPropiedades.js"></script>
-  <script src="/js/scriptPorpiedadDestBoton.js"></script>
+  <script src="./js/scriptSwiperHome.js"></script>
+  <script src="./js/scriptSwiperTestimonials.js"></script>
+  <script src="./js/scriptNavbarFixed.js"></script>
+  <script src="./js/scriptPropiedades.js"></script>
+  <script src="./js/scriptPorpiedadDestBoton.js"></script>
 </body>
 
 </html>
