cambios img contacto

--- a/index.html
+++ b/index.html
@@ -887,22 +887,23 @@
                     <!-- Redes Sociales -->
                     <div class="col-md-6 animate__animated animate__fadeInRight" id="contenedorSocialHome">
                         <div class="bg-white p-4 rounded shadow">
+                            
                             <h4 class="text-center mb-4">Síguenos en nuestras redes sociales</h4>
                             <div class="d-flex justify-content-center gap-3">
                                 <a href="#" class="text-decoration-none text-dark">
-                                    <i class="fab fa-facebook-f fa-2x"></i>
-                                </a>
-                                <a href="#" class="text-decoration-none text-dark">
-                                    <i class="fab fa-twitter fa-2x"></i>
-                                </a>
-                                <a href="#" class="text-decoration-none text-dark">
                                     <i class="fab fa-instagram fa-2x"></i>
+                                </a>
+                                <a href="#" class="text-decoration-none text-dark">
+                                    <i class="fab fa-facebook-f fa-2x"></i>
                                 </a>
                                 <a href="#" class="text-decoration-none text-dark">
                                     <i class="fab fa-linkedin-in fa-2x"></i>
                                 </a>
                             </div>
                             <p class="text-center mt-4">O llámanos al <strong>+54 9 351 6837691</strong></p>
+                            <div class="container">
+                                <img src="./images/imagenContactoUnenGroup.jpg" alt="imagen para contacto de UnenGroup inmobiliaria - Real Estate" style="width: 100%; border-radius: 5px;">
+                            </div>
                         </div>
                     </div>
                 </div>
