cambios vista nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -119,7 +119,8 @@
             <div class="overlay"></div>
             <div class="hero-content animate__animated animate__fadeIn">
                 <h1>Conoce a <span style="color: #71C6D4;">UnenGroup</span></h1>
-                <p>Comprometidos a ayudarte a encontrar el hogar ideal<br> para construir nuevas historias y momentos inolvidables.</p>
+                <p>Comprometidos a ayudarte a encontrar el hogar ideal<br> para construir nuevas historias y momentos
+                    inolvidables.</p>
                 <a href="#secContacto" class="btn btn-warning">Contáctanos</a>
             </div>
         </section>
@@ -343,61 +344,45 @@
 
         <!-- Contacto Section -->
 
-        <section id="secContacto" class="py-5 bg-light">
+        <section id="secContactoNosotros" class="py-5 bg-light">
             <div class="container">
                 <div class="text-center mb-5">
-                    <h2 class="animate__animated animate__fadeInDown">Contáctanos</h2>
-                    <p class="animate__animated animate__fadeInUp">Estamos aquí para ayudarte con todas tus necesidades
-                        inmobiliarias.</p>
+                    <h2 class="animate__animated animate__fadeInDown">¿Quieres conocernos mejor?</h2>
+                    <p class="animate__animated animate__fadeInUp">Nos encantaría saber de ti y ayudarte con tus
+                        necesidades inmobiliarias.</p>
                 </div>
 
-                <div class="row">
-                    <!-- Formulario de Contacto -->
+                <div class="row align-items-center">
+                    <!-- Información de Contacto -->
                     <div class="col-md-6 animate__animated animate__fadeInLeft">
-                        <form action="/enviar-mensaje" method="POST" class="bg-white p-4 rounded shadow">
-                            <div class="mb-3">
-                                <label for="nombre" class="form-label">Nombre</label>
-                                <input type="text" id="nombre" name="nombre" class="form-control"
-                                    placeholder="Tu Nombre" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Correo Electrónico</label>
-                                <input type="email" id="email" name="email" class="form-control" placeholder="Tu Correo"
-                                    required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="mensaje" class="form-label">Mensaje</label>
-                                <textarea id="mensaje" name="mensaje" class="form-control" rows="4"
-                                    placeholder="Escribe tu mensaje aquí" required></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-warning w-100 fw-bold">Enviar Mensaje</button>
-                        </form>
+                        <div class="bg-white p-4 rounded shadow">
+                            <h4 class="text-center mb-4">Información de contacto</h4>
+                            <p><i class="fas fa-envelope"></i> Email: <a
+                                    href="mailto:info@unengroup.com.ar">info@unengroup.com.ar</a></p>
+                            <p><i class="fas fa-clock"></i> Horario: Lunes a Viernes, 9:00 AM - 5:00 PM</p>
+                            <p><i class="fas fa-phone-alt"></i> Teléfono: <a href="tel:+5493516837691">+54 9 351
+                                    6837691</a></p>
+                            <p><i class="fab fa-whatsapp"></i> WhatsApp: <a href="https://wa.me/5493516837691"
+                                    target="_blank">Enviar mensaje</a></p>
+                        </div>
                     </div>
 
-                    <!-- Redes Sociales -->
+                    <!-- Imagen Representativa -->
                     <div class="col-md-6 animate__animated animate__fadeInRight">
-                        <div class="bg-white p-4 rounded shadow">
-                            <h4 class="text-center mb-4">Síguenos en nuestras Redes Sociales</h4>
-                            <div class="d-flex justify-content-center gap-3">
-                                <a href="#" class="text-decoration-none text-dark">
-                                    <i class="fab fa-facebook-f fa-2x"></i>
-                                </a>
-                                <a href="#" class="text-decoration-none text-dark">
-                                    <i class="fab fa-twitter fa-2x"></i>
-                                </a>
-                                <a href="#" class="text-decoration-none text-dark">
-                                    <i class="fab fa-instagram fa-2x"></i>
-                                </a>
-                                <a href="#" class="text-decoration-none text-dark">
-                                    <i class="fab fa-linkedin-in fa-2x"></i>
-                                </a>
-                            </div>
-                            <p class="text-center mt-4">O llámanos al <strong>+54 9 351 6837691</strong></p>
+                        <div class="image-container">
+                            <img src="./images/vistaNosotros/imgContactoNosotros.avif"
+                                alt="Representación de confianza y profesionalismo de UnenGroup"
+                                class="img-fluid rounded shadow" style="width: 100%; border-radius: 10px;">
                         </div>
                     </div>
                 </div>
+
+                <div class="text-center mt-5">
+                    <a href="#secContacto" class="btn btn-warning btn-lg">Ir al Formulario</a>
+                </div>
             </div>
         </section>
+
 
 
     </main>
@@ -439,7 +424,8 @@
             <div class="row">
                 <div class="col text-start">
                     <p>
-                        <h7 style="color: #71C6D4;" class="text-uppercase fw-bold">Legales</h7><br><small>La información detallada es exclusiva de Unen Group Real Estate y es
+                        <h7 style="color: #71C6D4;" class="text-uppercase fw-bold">Legales</h7><br><small>La información
+                            detallada es exclusiva de Unen Group Real Estate y es
                             susceptible a modificación sin previo aviso. Todas las medidas enunciadas son meramente
                             orientativas, las medidas exactas serán las que se expresen en el respectivo título de
                             propiedad de cada inmueble. Todas las fotos, imágenes y videos son meramente ilustrativos,
