cambios estilos nosotros y horarios footer

--- a/index.html
+++ b/index.html
@@ -741,22 +741,22 @@
 
         <!-- •-----------------Tesatimoniales---------------- -->
 
-        <section id="testimoniales" class="py-5 bg-light">
-            <div class="container" style="overflow: hidden;">
+        <!-- <section id="testimoniales" class="py-5 bg-light">
+            <div class="container" style="overflow: hidden;"> -->
                 <!-- Título de la sección -->
-                <div class="text-center mb-5">
+                <!-- <div class="text-center mb-5">
                     <h2 class="fw-bold text-primary animate__animated animate__fadeInUp">Testimonios de nuestros
                         clientes</h2>
                     <p class="text-muted animate__animated animate__fadeInUp animate__delay-1s">
                         Escucha lo que nuestros clientes tienen que decir sobre nosotros.
                     </p>
-                </div>
+                </div> -->
 
                 <!-- Swiper Container -->
-                <div class="swiper-container testimonial-slider">
-                    <div class="swiper-wrapper">
+                <!-- <div class="swiper-container testimonial-slider">
+                    <div class="swiper-wrapper"> -->
                         <!-- Testimonial 1 -->
-                        <div class="swiper-slide">
+                        <!-- <div class="swiper-slide">
                             <div
                                 class="testimonial-card p-4 shadow-sm rounded bg-white animate__animated animate__fadeInUp">
                                 <div class="testimonial-header d-flex align-items-center mb-3">
@@ -779,10 +779,10 @@
                                     <i class="fas fa-star text-warning"></i>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- Testimonial 2 -->
-                        <div class="swiper-slide">
+                        <!-- <div class="swiper-slide">
                             <div
                                 class="testimonial-card p-4 shadow-sm rounded bg-white animate__animated animate__fadeInUp">
                                 <div class="testimonial-header d-flex align-items-center mb-3">
@@ -804,10 +804,10 @@
                                     <i class="fas fa-star-half-alt text-warning"></i>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- Testimonial 3 -->
-                        <div class="swiper-slide">
+                        <!-- <div class="swiper-slide">
                             <div
                                 class="testimonial-card p-4 shadow-sm rounded bg-white animate__animated animate__fadeInUp">
                                 <div class="testimonial-header d-flex align-items-center mb-3">
@@ -831,13 +831,13 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Swiper Pagination -->
-                    <div id="colorTestimonialesVi" class="swiper-paginationn mt-4"></div>
+                    <!-- <div id="colorTestimonialesVi" class="swiper-paginationn mt-4"></div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
         <section id="contacto" class="py-5 bg-light">
@@ -939,12 +939,14 @@
                     </p></a>
                     <p id="telefonoFooter"><a href="mailto:info@unengroup.com.ar"><i class="fas fa-envelope"></i>
                             info@unengroup.com.ar</a></p>
+                            <p><i class="fas fa-clock"></i> Lunes a Viernes, 9:00 AM - 5:00 PM</p>
                     <div class="social-icons">
                         <a href="https://www.instagram.com/coty_gg/" class="text-light me-2"><i
                                 class="fab fa-facebook-f"></i></a>
                         <a href="https://www.facebook.com/coty.garcia" class="text-light me-2"><i
                                 class="fab fa-instagram"></i></a>
                     </div>
+                    
                 </div>
             </div>
             <hr class="my-4">
@@ -982,7 +984,7 @@
     <script src="https://cdn.jsdelivr.net/npm/pannellum/build/pannellum.js"></script>
     <!-- Script Propio -->
     <script src="./js/scriptSwiperHome.js"></script>
-    <script src="./js/scriptSwiperTestimonials.js"></script>
+    <!-- <script src="./js/scriptSwiperTestimonials.js"></script> -->
     <script src="./js/scriptNavbarFixed.js"></script>
     <script src="./js/scriptHome.js"></script>
     <script src="./js/scriptHomeDestacados.js"></script>
