--- a/nosotros.html
+++ b/nosotros.html
@@ -103,7 +103,7 @@
                             <a class="nav-link" href="/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#secContacto">Contacto</a>
+                            <a class="nav-link" href="#secContactoNosotros">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -268,7 +268,7 @@
                             <p>Ofrecer soluciones inmobiliarias personalizadas, seguras y confiables, adaptadas a las
                                 necesidades
                                 de nuestros clientes.</p>
-                            <a href="#secContacto" class="btn btn-warning">Contactanos!</a>
+                            <a href="#secContactoNosotros" class="btn btn-warning">Contactanos!</a>
                         </div>
                     </div>
                 </div>
@@ -276,13 +276,8 @@
         </section>
 
 
-
-
-
-
-
         <!-- Equipo Section -->
-        <section class="equipo-section" data-aos="fade-up">
+        <!-- <section class="equipo-section" data-aos="fade-up">
             <h2>Conoce a Nuestro Equipo</h2>
 
 
@@ -340,14 +335,14 @@
                     </div>
                 </div>
             </section>
-        </section>
+        </section> -->
 
         <!-- Contacto Section -->
 
         <section id="secContactoNosotros" class="py-5 bg-light">
             <div class="container">
                 <div class="text-center mb-5">
-                    <h2 class="animate__animated animate__fadeInDown">¿Quieres conocernos mejor?</h2>
+                    <h2 class="animate__animated animate__fadeInDown">¿Querés conocernos mejor?</h2>
                     <p class="animate__animated animate__fadeInUp">Nos encantaría saber de ti y ayudarte con tus
                         necesidades inmobiliarias.</p>
                 </div>
@@ -355,15 +350,20 @@
                 <div class="row align-items-center">
                     <!-- Información de Contacto -->
                     <div class="col-md-6 animate__animated animate__fadeInLeft">
-                        <div class="bg-white p-4 rounded shadow">
+                        <div class="bg-white p-4 rounded shadow" id="contenedorContactoSci">
                             <h4 class="text-center mb-4">Información de contacto</h4>
-                            <p><i class="fas fa-envelope"></i> Email: <a
+                            <p><i class="fas fa-envelope"></i> <strong>Email:</strong> <a
                                     href="mailto:info@unengroup.com.ar">info@unengroup.com.ar</a></p>
-                            <p><i class="fas fa-clock"></i> Horario: Lunes a Viernes, 9:00 AM - 5:00 PM</p>
-                            <p><i class="fas fa-phone-alt"></i> Teléfono: <a href="tel:+5493516837691">+54 9 351
+                            <p><i class="fas fa-phone-alt"></i> <strong>Teléfono:</strong> <a
+                                    href="tel:+5493516837691">+54 9 351
                                     6837691</a></p>
-                            <p><i class="fab fa-whatsapp"></i> WhatsApp: <a href="https://wa.me/5493516837691"
-                                    target="_blank">Enviar mensaje</a></p>
+                            <p><i class="fab fa-whatsapp" id="wpContactoBoton"></i> <strong>WhatsApp:</strong> <a
+                                    href="https://wa.me/5493516837691" target="_blank">Enviar mensaje</a></p>
+                            <p><i class="fas fa-clock"></i> <strong>Horario:</strong> Lunes a Viernes, 9:00 AM - 5:00 PM
+                            </p>
+                            <div class="text-center mt-5 botonSecNosotrosForm">
+                                <a href="/#contacto" class="btn btn-warning btn-lg">Ir al formulario</a>
+                            </div>
                         </div>
                     </div>
 
@@ -377,9 +377,7 @@
                     </div>
                 </div>
 
-                <div class="text-center mt-5">
-                    <a href="#secContacto" class="btn btn-warning btn-lg">Ir al Formulario</a>
-                </div>
+
             </div>
         </section>
 
@@ -412,12 +410,14 @@
                     </p></a>
                     <p id="telefonoFooter"><a href="mailto:info@unengroup.com.ar"><i class="fas fa-envelope"></i>
                             info@unengroup.com.ar</a></p>
+                    <p><i class="fas fa-clock"></i> Lunes a Viernes, 9:00 AM - 5:00 PM</p>
                     <div class="social-icons">
                         <a href="https://www.instagram.com/coty_gg/" class="text-light me-2"><i
                                 class="fab fa-facebook-f"></i></a>
                         <a href="https://www.facebook.com/coty.garcia" class="text-light me-2"><i
                                 class="fab fa-instagram"></i></a>
                     </div>
+
                 </div>
             </div>
             <hr class="my-4">
