--- a/propiedades.html
+++ b/propiedades.html
@@ -245,6 +245,7 @@
           </p></a>
           <p id="telefonoFooter"><a href="mailto:info@unengroup.com.ar"><i class="fas fa-envelope"></i>
               info@unengroup.com.ar</a></p>
+          <p><i class="fas fa-clock"></i> Lunes a Viernes, 9:00 AM - 5:00 PM</p>
           <div class="social-icons">
             <a href="https://www.instagram.com/coty_gg/" class="text-light me-2"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.facebook.com/coty.garcia" class="text-light me-2"><i class="fab fa-instagram"></i></a>
