cambios estilos nosotros y horarios footer

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                                     alt="Intermediación para la compra de propiedades por Unen Group"
                                     style="width: 100%; border-radius: 10px;">
                                 <h4 class="fw-bold my-3 text-start">Intermediación en compras</h4>
-                                <p class="text-start" style="min-height: 110px;">
+                                <p class="text-start espacioCardServ">
                                     Actuamos como el puente confiable entre compradores y vendedores para garantizar
                                     negociaciones exitosas.
                                 </p>
@@ -331,8 +331,7 @@
                                 <img src="./images/servicios/tasacion.jpg" alt="venta de propiedades por Unen Group"
                                     style="width: 100%; border-radius: 10px;">
                                 <h4 class="fw-bold my-3 text-start">Tasaciones</h4>
-                                <p class="text-start" style="min-height: 110px;">Determinamos el valor real de tu
-                                    propiedad para garantizar decisiones inteligentes.
+                                <p class="text-start espacioCardServ" >Determinamos el valor real de tu propiedad para garantizar decisiones inteligentes y efectivas.
                                 </p>
                                 <div class="d-flex flex-column justify-content-center gap-2 ">
                                     <a href="#contacto" onclick="setContactType('tasaciones')"
