--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                 class="btn btn-warning btn-lg animate__animated animate__fadeInUp mt-3">Ver
                                 Propiedades</a>
                         </div>
-                        <img src="./images/carouselHome/CasaLD-00.jpeg" class="img-fluid" alt="Propiedad destacada">
+                        <img src="./images/home/heroBienvenida/heroFrist.jpg" class="img-fluid" alt="Propiedad destacada">
                     </div>
                     <!-- Slide 2 -->
                     <div class="swiper-slide">
@@ -145,7 +145,7 @@
                                 class="btn btn-warning btn-lg animate__animated animate__fadeInUp mt-3">Nuestros
                                 Servicios</a>
                         </div>
-                        <img src="./images/carouselHome/CasaLD-01.jpeg" class="img-fluid" alt="Propiedad de lujo">
+                        <img src="./images/home/heroBienvenida/heroHomeSecImg.jpg" class="img-fluid" alt="Propiedad de lujo">
                     </div>
                 </div>
                 <!-- Pagination -->
@@ -889,10 +889,10 @@
                             
                             <h4 class="text-center mb-4">Síguenos en nuestras redes sociales</h4>
                             <div class="d-flex justify-content-center gap-3">
-                                <a href="#" class="text-decoration-none text-dark">
+                                <a href="https://www.instagram.com/unengroup/" class="text-decoration-none text-dark">
                                     <i class="fab fa-instagram fa-2x"></i>
                                 </a>
-                                <a href="#" class="text-decoration-none text-dark">
+                                <a href="https://www.facebook.com/coty.garcia" class="text-decoration-none text-dark">
                                     <i class="fab fa-facebook-f fa-2x"></i>
                                 </a>
                                 <a href="#" class="text-decoration-none text-dark">
@@ -901,7 +901,7 @@
                             </div>
                             <p class="text-center mt-4">O llámanos al <strong>+54 9 351 6837691</strong></p>
                             <div class="container">
-                                <img src="./images/imagenContactoUnenGroup.jpg" alt="imagen para contacto de UnenGroup inmobiliaria - Real Estate" style="width: 100%; border-radius: 5px;">
+                                <img src="./images/home/imagenContactoUnenGroup.jpg" alt="imagen para contacto de UnenGroup inmobiliaria - Real Estate" style="width: 100%; border-radius: 5px;">
                             </div>
                         </div>
                     </div>
@@ -940,7 +940,7 @@
                             info@unengroup.com.ar</a></p>
                             <p><i class="fas fa-clock"></i> Lunes a Viernes, 9:00 AM - 5:00 PM</p>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/coty_gg/" class="text-light me-2"><i
+                        <a href="https://www.instagram.com/unengroup/" class="text-light me-2"><i
                                 class="fab fa-facebook-f"></i></a>
                         <a href="https://www.facebook.com/coty.garcia" class="text-light me-2"><i
                                 class="fab fa-instagram"></i></a>
