cambios imagenes, portadas, cards prop

--- a/nosotros.html
+++ b/nosotros.html
@@ -9,21 +9,21 @@
 
     <!-- Meta SEO -->
     <title>UnenGroup | Nosotros</title>
-    <meta name="description" content="Descripción breve y precisa para buscadores.">
+    <!-- <meta name="description" content="Descripción breve y precisa para buscadores.">
     <meta name="keywords" content="palabras clave, separadas, por, comas">
     <meta name="author" content="Tu Nombre o Empresa">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow"> -->
 
     <!-- Meta Redes Sociales (Open Graph y Twitter Cards) -->
-    <meta property="og:title" content="Nombre de tu Sitio | Título de la Página">
+    <!-- <meta property="og:title" content="Nombre de tu Sitio | Título de la Página">
     <meta property="og:description" content="Descripción atractiva para compartir en redes sociales.">
     <meta property="og:image" content="URL_de_la_imagen_destacada">
     <meta property="og:url" content="https://tusitioweb.com">
     <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image"> -->
 
     <!-- Icono del Sitio -->
-    <link rel="icon" href="/images/logo.png" type="image/x-icon">
+    <link rel="icon" href="./images/logo.png" type="image/x-icon">
 
     <!-- CSS Frameworks y Librerías -->
     <!-- Bootstrap -->
@@ -72,30 +72,33 @@
                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Tipos de propiedades
                             </a>
-                            <ul class="dropdown-menu animate__animated" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu animate__animated ulProps" aria-labelledby="navbarDropdown">
                                 <li>
-                                    <a class="dropdown-item" href="propiedades.html?tipo=alquiler">Alquiler </a>
+                                    <a class="dropdown-item" href="propiedades.html?tipo=alquiler#filtros">Alquiler </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="propiedades.html?tipo=venta">Venta</a>
+                                    <a class="dropdown-item" href="propiedades.html?tipo=venta#filtros">Venta</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="propiedades.html?tipo=alquiler-temporario">Alquiler
+                                    <a class="dropdown-item"
+                                        href="propiedades.html?tipo=alquiler-temporario#filtros">Alquiler
                                         Temporario</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="propiedades.html?tipo=alquiler-temporario">Alquiler
+                                    <a class="dropdown-item"
+                                        href="propiedades.html?tipo=alquiler-temporario#filtros">Alquiler
                                         Vacacional</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="propiedades.html?tipo=terreno">Terrenos</a>
+                                    <a class="dropdown-item" href="propiedades.html?tipo=terreno#filtros">Terrenos</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="propiedades.html?tipo=local">Locales |
+                                    <a class="dropdown-item" href="propiedades.html?tipo=local-oficina#filtros">Locales
+                                        |
                                         Oficinas</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="propiedades.html?tipo=all">Todas</a>
+                                    <a class="dropdown-item" href="propiedades.html?tipo=all#filtros">Todas</a>
                                 </li>
                             </ul>
                         </li>
@@ -129,7 +132,7 @@
             <!-- Video de fondo -->
             <div class="video-bg">
                 <video autoplay loop muted playsinline>
-                    <source src="/videos/prueba1.mp4" type="video/mp4">
+                    <source src="./videos/prueba1.mp4" type="video/mp4">
                     Tu navegador no soporta la reproducción de videos.
                 </video>
             </div>
@@ -393,7 +396,7 @@
                 <div class="col-md-8">
                     <h5 class="text-uppercase mb-3">Sobre Nosotros</h5>
                     <div class="d-flex align-items-center" id="espacioFotoMobile">
-                        <img src="/images/fotoEjemploCoty.jpg" alt="logo" class="me-3 ocultarMobile"
+                        <img src="./images/fotoEjemploCoty.jpg" alt="logo" class="me-3 ocultarMobile"
                             style="max-width: 150px; border-radius:50%;">
                         <p class="mb-0">Somos una inmobiliaria comprometida con ayudarte a encontrar el hogar de tus
                             sueños. Ofrecemos
@@ -452,8 +455,8 @@
     <!-- Swiper.js -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- Script Propio -->
-    <script src="/js/scriptSwiperValores.js"></script>
-    <script src="/js/scriptNavbarFixed.js"></script>
+    <script src="./js/scriptSwiperValores.js"></script>
+    <script src="./js/scriptNavbarFixed.js"></script>
 </body>
 
 </html>
