--- a/propiedades.html
+++ b/propiedades.html
@@ -72,28 +72,31 @@
                 data-bs-toggle="dropdown" aria-expanded="false">
                 Tipos de propiedades
               </a>
-              <ul class="dropdown-menu animate__animated" aria-labelledby="navbarDropdown">
+              <ul class="dropdown-menu animate__animated ulProps" aria-labelledby="navbarDropdown">
                 <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=alquiler">Alquiler </a>
+                  <a class="dropdown-item" href="propiedades.html?tipo=alquiler#filtros">Alquiler </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=venta">Venta</a>
+                  <a class="dropdown-item" href="propiedades.html?tipo=venta#filtros">Venta</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=alquiler-temporario">Alquiler Temporario</a>
+                  <a class="dropdown-item" href="propiedades.html?tipo=alquiler-temporario#filtros">Alquiler
+                    Temporario</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=alquiler-temporario">Alquiler Vacacional</a>
+                  <a class="dropdown-item" href="propiedades.html?tipo=alquiler-temporario#filtros">Alquiler
+                    Vacacional</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=terreno">Terrenos</a>
+                  <a class="dropdown-item" href="propiedades.html?tipo=terreno#filtros">Terrenos</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=local">Locales |
+                  <a class="dropdown-item" href="propiedades.html?tipo=local-oficina#filtros">Locales
+                    |
                     Oficinas</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=all">Todas</a>
+                  <a class="dropdown-item" href="propiedades.html?tipo=all#filtros">Todas</a>
                 </li>
               </ul>
             </li>
