cambios animasiones sections

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                         Oficinas</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="propiedades.html?tipo=all#filtros">Todas</a>
+                                    <a class="dropdown-item" href="propiedades.html?tipo=all">Todas</a>
                                 </li>
                             </ul>
                         </li>
@@ -118,7 +118,7 @@
     </header>
 
     <main>
-        <section id="hero" class="position-relative">
+        <section id="hero" class="position-relative section">
             <div class="swiper-container main-slider">
                 <div class="swiper-wrapper">
                     <!-- Slide 1 -->
